# CellSemAgenticWorkflow

./: .gitignore  CLAUDE.md  LICENSE  Planning.md  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: tests.yml
hooks/: post_gen_project.sh
tests/unit/: test_template_structure.py
{{cookiecutter.project_slug}}/: CLAUDE.md  LICENSE  README.md  SCAFFOLD_GUIDE.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: test.yml
{{cookiecutter.project_slug}}/docs/: conf.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/agents/: example_agent.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/graphs/: definitions.py  graph_agent.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/schemas/: workflow_output.schema.json
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/validation/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/graphs/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}_validation_tools/: README.md  pyproject.toml
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}_validation_tools/{{cookiecutter.package_name}}_validation_tools/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}_validation_tools/{{cookiecutter.package_name}}_validation_tools/comparisons/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}_validation_tools/{{cookiecutter.package_name}}_validation_tools/metrics/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.package_name}}_validation_tools/{{cookiecutter.package_name}}_validation_tools/visualizations/: README.md
