[project]
name = "{{cookiecutter.package_name}}-validation-tools"
version = "0.1.0"
description = "Validation and analysis tools for {{cookiecutter.project_name}}"
readme = "README.md"
requires-python = ">= {{cookiecutter.python_version}}"
dependencies = [
    "{{cookiecutter.package_name}}",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
